refactor, centralize asset-link API types & update sdk/bindings
